# Telco-Customer-Churn-Analysis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  README.md  deployment_pipeline.pkl  justfile  pyproject.toml  requirements.txt
.ebextensions/: 01_packages.config  02_pip_upgrade.config  python.config
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
telco_customer_churn_analysis/.github/workflows/: test.yml
telco_customer_churn_analysis/docs/: abc_testing.md  data_dictionary.md  executive_summary.md  index.md  installation.md  methodology.md  mlops_pipeline.md  problem_statment.md  profit_optimization.md  shap_explainability.md  usage.md
telco_customer_churn_analysis/src/: app.py  application.py
telco_customer_churn_analysis/src/telco_customer_churn_analysis/: __init__.py  cli.py  model_utils.py  model_xai.py  s3_utils.py  telco_customer_churn_analysis.py  telco_customer_churn_analysis_app.py  utils.py
telco_customer_churn_analysis/src/templates/: eda.html  hypothesis_results.html  model_results.html
telco_customer_churn_analysis/tests/: __init__.py  test_cli.py  test_model_utils.py  test_model_xai.py  test_s3_utils.py  test_telco_customer_churn_analysis.py  test_telco_customer_churn_analysis_app.py  test_utils.py
